--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBackground">#F8F8F8</color>
     <color name="colorPrimaryDark">#1A8ED7</color>
+    <color name="colorBlue20">#CBE2F1</color>
 
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/colorPrimaryDark</color>
 
